javafx thread no worky worky